--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,15 +4,11 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.atmecs.newtour.test.NewTourDemo</td>
+<td>com.atmecs.newtour.testscript.Confirmation</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>link</td>
-<td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
 <td>selectFlight</td>
