--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,34 +8,42 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="7">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">21,100</td><td></td><td></td></tr>
-<tr class="stripe"><td><a href="#t1">Test1</a></td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">14,672</td><td></td><td></td></tr>
-<tr><td><a href="#t2">Test2</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">90,628</td><td></td><td></td></tr>
-<tr class="stripe"><td><a href="#t3">Test3</a></td><td class="num">1</td><td class="num">0</td><td class="num attn">1</td><td class="num">70,141</td><td></td><td></td></tr>
-<tr><td><a href="#t4">Test4</a></td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">11,966</td><td></td><td></td></tr>
-<tr><th>Total</th><th class="num">2</th><th class="num">0</th><th class="num attn">3</th><th class="num">208,507</th><th colspan="2"></th></tr>
+<tr><th colspan="7">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num attn">1</td><td class="num">83,058</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4" class="invisible"/></tr></tbody>
-<tbody id="t1"><tr><th colspan="4">Test1 &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.atmecs.newtour.link.LinkTest</td><td><a href="#m0">link</a></td><td rowspan="1">1567091594521</td><td rowspan="1">100</td></tr></tbody>
-<tbody id="t2"><tr><th colspan="4">Test2 &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.atmecs.newtour.login.Login</td><td><a href="#m1">login</a></td><td rowspan="1">1567091617264</td><td rowspan="1">68123</td></tr></tbody>
-<tbody id="t3"><tr><th colspan="4">Test3 &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.atmecs.newtour.booking.Booking</td><td><a href="#m2">register</a></td><td rowspan="1">1567091695888</td><td rowspan="1">2</td></tr><tr><th colspan="4">Test3 &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.atmecs.newtour.booking.Booking</td><td><a href="#m3">login</a></td><td rowspan="1">1567091695896</td><td rowspan="1">59649</td></tr></tbody>
-<tbody id="t4"><tr><th colspan="4">Test4 &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.atmecs.newtour.select.Confirmation</td><td><a href="#m4">selectFlight</a></td><td rowspan="1">1567091767523</td><td rowspan="1">3</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.atmecs.newtour.testscript.Confirmation</td><td><a href="#m0">selectFlight</a></td><td rowspan="1">1567166251438</td><td rowspan="1">92</td></tr><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">com.atmecs.newtour.testscript.Confirmation</td><td><a href="#m1">login</a></td><td rowspan="1">1567166251593</td><td rowspan="1">54989</td></tr><tr class="passedeven"><td><a href="#m2">register</a></td><td rowspan="1">1567166306587</td><td rowspan="1">4149</td></tr></tbody>
 </table>
-<h2>Test</h2><h2>Test1</h2><h3 id="m0">com.atmecs.newtour.link.LinkTest#link</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [Mercury Tours] but found [Welcome: Mercury Tours]
-	at com.atmecs.newtour.link.LinkTest.link(LinkTest.java:17)
-... Removed 31 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>Test2</h2><h3 id="m1">com.atmecs.newtour.login.Login#login</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>Test3</h2><h3 id="m2">com.atmecs.newtour.booking.Booking#register</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.IllegalArgumentException: Cannot find elements when the XPath is null.
+<h2>Default test</h2><h3 id="m0">com.atmecs.newtour.testscript.Confirmation#selectFlight</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.IllegalArgumentException: Cannot find elements when the XPath is null.
 	at org.openqa.selenium.By$ByXPath.&lt;init&gt;(By.java:339)
 	at org.openqa.selenium.By.xpath(By.java:92)
-	at com.atmecs.newtour.booking.Booking.register(Booking.java:14)
-... Removed 25 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">com.atmecs.newtour.booking.Booking#login</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>Test4</h2><h3 id="m4">com.atmecs.newtour.select.Confirmation#selectFlight</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.IllegalArgumentException: Cannot find elements when the XPath is null.
-	at org.openqa.selenium.By$ByXPath.&lt;init&gt;(By.java:339)
-	at org.openqa.selenium.By.xpath(By.java:92)
-	at com.atmecs.newtour.select.Confirmation.selectFlight(Confirmation.java:13)
-... Removed 25 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+	at com.atmecs.newtour.testscript.Confirmation.selectFlight(Confirmation.java:14)
+	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
+	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
+	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
+	at java.base/java.lang.reflect.Method.invoke(Method.java:567)
+	at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:124)
+	at org.testng.internal.Invoker.invokeMethod(Invoker.java:583)
+	at org.testng.internal.Invoker.invokeTestMethod(Invoker.java:719)
+	at org.testng.internal.Invoker.invokeTestMethods(Invoker.java:989)
+	at org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:125)
+	at org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:109)
+	at org.testng.TestRunner.privateRun(TestRunner.java:648)
+	at org.testng.TestRunner.run(TestRunner.java:505)
+	at org.testng.SuiteRunner.runTest(SuiteRunner.java:455)
+	at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:450)
+	at org.testng.SuiteRunner.privateRun(SuiteRunner.java:415)
+	at org.testng.SuiteRunner.run(SuiteRunner.java:364)
+	at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:52)
+	at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:84)
+	at org.testng.TestNG.runSuitesSequentially(TestNG.java:1208)
+	at org.testng.TestNG.runSuitesLocally(TestNG.java:1137)
+	at org.testng.TestNG.runSuites(TestNG.java:1049)
+	at org.testng.TestNG.run(TestNG.java:1017)
+	at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:115)
+	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:251)
+	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:77)
+</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.atmecs.newtour.testscript.Confirmation#login</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">com.atmecs.newtour.testscript.Confirmation#register</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
