--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a0b878">  <td>19/08/29 20:08:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTourDemo.link()[pri:0, instance:com.atmecs.newtour.test.NewTourDemo@78b1cc93]">link</td> 
-  <td>main@247944893</td>   <td></td> </tr>
-<tr bgcolor="a0b878">  <td>19/08/29 20:08:26</td>   <td>131</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTourDemo.login()[pri:0, instance:com.atmecs.newtour.test.NewTourDemo@78b1cc93]">login</td> 
-  <td>main@247944893</td>   <td></td> </tr>
-<tr bgcolor="a0b878">  <td>19/08/29 20:09:03</td>   <td>36960</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTourDemo.register()[pri:0, instance:com.atmecs.newtour.test.NewTourDemo@78b1cc93]">register</td> 
-  <td>main@247944893</td>   <td></td> </tr>
-<tr bgcolor="a0b878">  <td>19/08/29 20:09:08</td>   <td>42471</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTourDemo.selectFlight()[pri:0, instance:com.atmecs.newtour.test.NewTourDemo@78b1cc93]">selectFlight</td> 
-  <td>main@247944893</td>   <td></td> </tr>
-<tr bgcolor="a0b878">  <td>19/08/29 20:08:09</td>   <td>-16896</td> <td>&nbsp;</td><td title="&gt;&gt;NewTourDemo.setup()[pri:0, instance:com.atmecs.newtour.test.NewTourDemo@78b1cc93]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@247944893</td>   <td></td> </tr>
+<tr bgcolor="717884">  <td>19/08/30 17:28:30</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;TestBase.close()[pri:0, instance:com.atmecs.newtour.testscript.Confirmation@6295d394]">&lt;&lt;close</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@384294141</td>   <td></td> </tr>
+<tr bgcolor="7badd3">  <td>19/08/30 17:27:31</td>   <td>-59147</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.login()[pri:1, instance:com.atmecs.newtour.testscript.Confirmation@6295d394]">login</td> 
+  <td>main@384294141</td>   <td></td> </tr>
+<tr bgcolor="7badd3">  <td>19/08/30 17:28:26</td>   <td>-4153</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.register()[pri:2, instance:com.atmecs.newtour.testscript.Confirmation@6295d394]">register</td> 
+  <td>main@384294141</td>   <td></td> </tr>
+<tr bgcolor="acb08a">  <td>19/08/30 17:27:31</td>   <td>-59302</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Confirmation.selectFlight()[pri:0, instance:com.atmecs.newtour.testscript.Confirmation@6295d394]">selectFlight</td> 
+  <td>main@384294141</td>   <td></td> </tr>
+<tr bgcolor="717884">  <td>19/08/30 17:27:08</td>   <td>-82128</td> <td>&nbsp;</td><td title="&gt;&gt;TestBase.setup()[pri:0, instance:com.atmecs.newtour.testscript.Confirmation@6295d394]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@384294141</td>   <td></td> </tr>
 </table>
