--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,24 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a5fe93">  <td>19/08/29 20:43:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LinkTest.link()[pri:0, instance:com.atmecs.newtour.link.LinkTest@527e5409]">link</td> 
-  <td>main@1196695891</td>   <td></td> </tr>
-<tr bgcolor="6d816d">  <td>19/08/29 20:43:37</td>   <td>22743</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.login()[pri:0, instance:com.atmecs.newtour.login.Login@78dd667e]">login</td> 
-  <td>main@1196695891</td>   <td></td> </tr>
-<tr bgcolor="6d816d">  <td>19/08/29 20:44:55</td>   <td>101375</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.login()[pri:0, instance:com.atmecs.newtour.booking.Booking@1df82230]">login</td> 
-  <td>main@1196695891</td>   <td></td> </tr>
-<tr bgcolor="8e97bc">  <td>19/08/29 20:44:55</td>   <td>101367</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Booking.register()[pri:0, instance:com.atmecs.newtour.booking.Booking@1df82230]">register</td> 
-  <td>main@1196695891</td>   <td></td> </tr>
-<tr bgcolor="c2a19d">  <td>19/08/29 20:46:07</td>   <td>173002</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Confirmation.selectFlight()[pri:0, instance:com.atmecs.newtour.select.Confirmation@70be0a2b]">selectFlight</td> 
-  <td>main@1196695891</td>   <td></td> </tr>
-<tr bgcolor="a0b878">  <td>19/08/29 20:42:36</td>   <td>-37828</td> <td>&nbsp;</td><td title="&gt;&gt;NewTourDemo.setup()[pri:0, instance:com.atmecs.newtour.test.NewTourDemo@240237d2]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1196695891</td>   <td></td> </tr>
-<tr bgcolor="a0b878">  <td>19/08/29 20:43:00</td>   <td>-14494</td> <td>&nbsp;</td><td title="&gt;&gt;NewTourDemo.setup()[pri:0, instance:com.atmecs.newtour.link.LinkTest@527e5409]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1196695891</td>   <td></td> </tr>
-<tr bgcolor="a0b878">  <td>19/08/29 20:43:14</td>   <td>256</td> <td>&nbsp;</td><td title="&gt;&gt;NewTourDemo.setup()[pri:0, instance:com.atmecs.newtour.login.Login@78dd667e]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1196695891</td>   <td></td> </tr>
-<tr bgcolor="a0b878">  <td>19/08/29 20:44:45</td>   <td>90902</td> <td>&nbsp;</td><td title="&gt;&gt;NewTourDemo.setup()[pri:0, instance:com.atmecs.newtour.booking.Booking@1df82230]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1196695891</td>   <td></td> </tr>
-<tr bgcolor="a0b878">  <td>19/08/29 20:45:55</td>   <td>161046</td> <td>&nbsp;</td><td title="&gt;&gt;NewTourDemo.setup()[pri:0, instance:com.atmecs.newtour.select.Confirmation@70be0a2b]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1196695891</td>   <td></td> </tr>
+<tr bgcolor="a0b878">  <td>19/08/30 15:20:44</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;Close.close()[pri:0, instance:com.atmecs.newtour.test.Close@475e586c]">&lt;&lt;close</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1024597427</td>   <td></td> </tr>
+<tr bgcolor="6be2c3">  <td>19/08/30 15:19:38</td>   <td>-66128</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.login()[pri:1, instance:com.atmecs.newtour.test.Close@475e586c]">login</td> 
+  <td>main@1024597427</td>   <td></td> </tr>
+<tr bgcolor="7badd3">  <td>19/08/30 15:20:44</td>   <td>-119</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Booking.register()[pri:2, instance:com.atmecs.newtour.test.Close@475e586c]">register</td> 
+  <td>main@1024597427</td>   <td></td> </tr>
+<tr bgcolor="be656f">  <td>19/08/30 15:20:44</td>   <td>-30</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Confirmation.selectFlight()[pri:3, instance:com.atmecs.newtour.test.Close@475e586c]">selectFlight</td> 
+  <td>main@1024597427</td>   <td></td> </tr>
+<tr bgcolor="c4717c">  <td>19/08/30 15:19:17</td>   <td>-86539</td> <td>&nbsp;</td><td title="&gt;&gt;NewTourDemo.setup()[pri:0, instance:com.atmecs.newtour.test.Close@475e586c]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1024597427</td>   <td></td> </tr>
 </table>
